<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    android:textDirection="firstStrong"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9C27B0"
        android:text="@string/convertidor"
        android:textAlignment="center"
        android:textColor="#EFF0FB"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/dolares"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/euros"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTop" />

    <RadioButton
        android:id="@+id/rbDE"
        android:layout_width="217dp"
        android:layout_height="64dp"
        android:layout_marginTop="56dp"
        android:checked="true"
        android:text="@string/dolares_a_euros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBottom" />

    <RadioButton
        android:id="@+id/rbED"
        android:layout_width="224dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:text="@string/euros_a_dolares"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbDE" />

    <Button
        android:id="@+id/btConvertir"
        android:layout_width="228dp"
        android:layout_height="59dp"
        android:layout_marginTop="64dp"
        android:text="@string/convertir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbED" />

    <EditText
        android:id="@+id/etTop"
        android:layout_width="252dp"
        android:layout_height="49dp"
        android:layout_marginTop="52dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="0"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTop"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etBottom"
        android:layout_width="251dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:accessibilityHeading="false"
        android:autofillHints=""
        android:clickable="false"
        android:ems="10"
        android:enabled="false"
        android:inputType="none"
        android:text="@string/_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBottom"
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>